tests/invalid/test_29_invalid_func_type.ul
// test 29 : uses invalid type 'foo' for function return type
// Parser / Lexer Valid: Yes

foo main() {}